--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,8 @@ main {
 }
 
 .container {
-    height: 80vh;
+    margin-block: 2em;
+    min-height: 80vh;
     width: 80%;
     display: grid;
     grid-gap: 1.5em;
